--- a/views/registration_page.hbs
+++ b/views/registration_page.hbs
@@ -1,20 +1,20 @@
+<form action="/registration" class="registration" method="post">
+    <h1 style="color:#F2A83A; margin-top:35px;margin-bottom:20px;">Регистрация</h1>
 
-    <div class="registration">
-        <h1 style="color:#F2A83A; margin-top:35px;margin-bottom:20px;">Регистрация</h1>
-        
-            
-                
-                <input placeholder="Логин" name="username" type="text">
 
-                <input placeholder="Пароль" type="password" name="password" type="text">
 
-                <input placeholder="ФИО" type="text" name="fio" type="text">
-                
-                <input placeholder="Номер телефона" name="phone_number" type="text">
-                
-            <br>
-            <button form="registration" formaction="/registration" formmethod="post" class="btn" style="margin-top: 20px;" type="submit">Регистрация</button>
-            <a style="color: #777373; text-decoration:none; margin-top:10px; margin-bottom: 20px;" href="/enter">Войти</a>
+    <input placeholder="Логин" name="username" type="text">
+
+    <input placeholder="Пароль" type="password" name="password" type="text">
+
+    <input placeholder="ФИО" type="text" name="fio" type="text">
+
+    <input placeholder="Номер телефона" name="phone_number" type="text">
+
+    <br>
+    <button class="btn" style="margin-top: 20px;"
+        type="submit">Регистрация</button>
+    <a style="color: #777373; text-decoration:none; margin-top:10px; margin-bottom: 20px;" href="/enter">Войти</a>
     </div>
 
-<form id="registration"></form>
+</form>
