--- a/public/style.css
+++ b/public/style.css
@@ -427,12 +427,11 @@ h6 {
 }
 
 #myTable {
-    width: 1300px;
+    width: 100%;
     margin: 50px auto;
     border-collapse: collapse;
     font-size: 14px;
     border: 1px solid rgba(0, 0, 0, .5);
-    border-radius: 10px;
     background-color: #e8e6e6;
 
 }
@@ -469,4 +468,37 @@ h6 {
 
 .box {
     display: block;
+}
+
+.edit{
+    margin-top: 30px;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.edit_box{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 150px;
+    width: 150px;
+    margin-right: 30px;
+}
+.edit_box:last-child{
+    margin-right: 0;
+}
+
+
+.edit_box input{
+    width: 150px;
+    height: 20px;
+}
+
+.edit_box select{
+    width: 150px;
+    height: 20px;
 }
