--- a/views/edit_applications.hbs
+++ b/views/edit_applications.hbs
@@ -68,7 +68,7 @@
             <select name="worker" id="worker">
                 <option value="Колдашев Рамиль Рустамович">Колдашев Рамиль Рустамович</option>
                 <option value="Нагибин Владислав Александрович">Нагибин Владислав Александрович</option>
-                <option value="Черемнов Степан Дмитриеви">Черемнов Степан Дмитриеви</option>
+                <option value="Черемнов Степан Дмитриевич">Черемнов Степан Дмитриевич</option>
                 <option value="Климонтов Роберт Владимирович">Климонтов Роберт Владимирович</option>
             </select>
         </div>
