--- a/public/style.css
+++ b/public/style.css
@@ -76,7 +76,7 @@ h6 {
     display: flex;
     justify-content: center;
     margin-top: -35px;
-    
+
 }
 
 .contacts {
@@ -85,15 +85,15 @@ h6 {
     padding: 150px 0;
 }
 
-.contacts_left p{
+.contacts_left p {
     display: flex;
     flex-direction: column;
     color: #000000;
-    
+
 }
 
 /*-----------------------------------------------------------Auth*/
-.enter{
+.enter {
     margin: 100px auto;
     display: flex;
     width: 460px;
@@ -103,16 +103,18 @@ h6 {
     background-color: #222327;
     border-radius: 10px;
 }
-.enter input{
+
+.enter input {
     width: 310px;
     height: 50px;
     border-radius: 10px;
     border: none;
     text-align: center;
-    margin:15px 0;
+    margin: 15px 0;
     font-size: 16px;
 }
-.enter button{
+
+.enter button {
     width: 310px;
     height: 60px;
     background-color: #F2A83B;
@@ -121,7 +123,7 @@ h6 {
     font-size: 16px;
 }
 
-.registration{
+.registration {
     margin: 100px auto;
     display: flex;
     width: 460px;
@@ -132,16 +134,17 @@ h6 {
     border-radius: 10px;
 }
 
-.registration input{
+.registration input {
     width: 310px;
     height: 50px;
     border-radius: 10px;
     border: none;
     text-align: center;
-    margin:15px 0;
+    margin: 15px 0;
     font-size: 16px;
 }
-.registration button{
+
+.registration button {
     width: 310px;
     height: 60px;
     background-color: #F2A83B;
@@ -153,18 +156,20 @@ h6 {
 
 /*-----------------------------------------------------------applications*/
 
-.applications{
+.applications {
     display: flex;
     justify-content: center;
     padding: 60px 0;
 }
-.applications_header{
+
+.applications_header {
     display: flex;
     flex-direction: column;
     text-align: center;
-    
+
 }
-.applications_input{
+
+.applications_input {
     display: flex;
     flex-direction: row;
     width: 840px;
@@ -173,7 +178,8 @@ h6 {
     border: #000000 1px solid;
     border-radius: 10px;
 }
-.applications_input input{
+
+.applications_input input {
     width: 310px;
     height: 46px;
     border: none;
@@ -181,10 +187,10 @@ h6 {
     padding: 0 25px;
     overflow: none;
     border-radius: 10px;
-    margin-bottom:15px;
+    margin-bottom: 15px;
 }
 
-#comment{
+#comment {
     width: 310px;
     height: 120px;
     border: none;
@@ -192,32 +198,35 @@ h6 {
     padding: 10px 25px;
     overflow: none;
     border-radius: 10px;
-    margin-bottom:15px;
-    
+    margin-bottom: 15px;
+
 }
 
-.applications_input select{
+.applications_input select {
     width: 155px;
     height: 46px;
     border: none;
     background-color: #EBEBEB;
     padding: 0 20px;
 }
-.applications_left{
+
+.applications_left {
     display: flex;
     flex-direction: column;
     width: 100%;
     justify-content: center;
     align-items: center;
 }
-.applications_right{
+
+.applications_right {
     justify-content: center;
     display: flex;
     flex-direction: column;
     width: 100%;
     align-items: center;
 }
-.applications_right_inputs{
+
+.applications_right_inputs {
     display: flex;
     flex-direction: column;
     width: 310px;
@@ -225,7 +234,8 @@ h6 {
     border: #000000 1px solid;
     border-radius: 10px;
 }
-.applications_right_inputs input{
+
+.applications_right_inputs input {
     width: 154px;
     height: 46px;
 }
@@ -272,15 +282,16 @@ h6 {
 /* -----------------------------------------------------Личный кабинет */
 
 
-.admin_worker{
+.admin_worker {
     display: flex;
     flex-direction: column;
     position: absolute;
     bottom: 10px;
-    left:60px;
-    
+    left: 60px;
+
 }
-.admin_worker a{
+
+.admin_worker a {
     color: #777373;
     text-decoration: none;
 }
@@ -417,11 +428,11 @@ h6 {
 }
 
 /* -----------------------------------------------------Таблицы */
-.table_wrapper{
+.table_wrapper {
     width: 100%;
     height: 100%;
     min-height: 300px;
-    padding: 20px 0 ;
+    padding: 20px 0;
     margin: 0 auto;
     background-color: #F2A83B;
 }
@@ -466,11 +477,34 @@ h6 {
     display: none;
 }
 
-.box {
-    display: block;
+.model_box {
+    position: relative;
 }
 
-.edit{
+.brand_box {
+    position: relative;
+}
+
+.box {
+    position: absolute;
+    top: 39px;
+    left: -1px;
+    background-color: #EBEBEB;
+    height: auto;
+    width: 155px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 13px;
+    border-radius: 0 0 10px 10px;
+}
+
+.box a {
+    margin-bottom: 5px;
+    margin-left: 26px;
+}
+
+.edit {
     margin-top: 30px;
     display: flex;
     flex-direction: row;
@@ -480,7 +514,7 @@ h6 {
     text-align: center;
 }
 
-.edit_box{
+.edit_box {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -488,17 +522,18 @@ h6 {
     width: 150px;
     margin-right: 30px;
 }
-.edit_box:last-child{
+
+.edit_box:last-child {
     margin-right: 0;
 }
 
 
-.edit_box input{
+.edit_box input {
     width: 150px;
     height: 20px;
 }
 
-.edit_box select{
+.edit_box select {
     width: 150px;
     height: 20px;
 }
