--- a/views/create_application.hbs
+++ b/views/create_application.hbs
@@ -78,8 +78,8 @@
                                 <a onclick="get_model('S20')">S20</a>
                             </div>
                             <div class="hidden_box" id="hidden_box_model_xiaomi">
-                                <a onclick="get_model('Mi 11')">Mi 11</a>
-                                <a onclick="get_model('Mi 11 Pro')">Mi 11 Pro</a>
+                                <a onclick="get_model('MI 11')">Mi 11</a>
+                                <a onclick="get_model('MI 11 Pro')">Mi 11 Pro</a>
                             </div>
                             <div class="hidden_box" id="hidden_box_model_huawei">
                                 <a onclick="get_model('Mate 40')">Mate 40</a>
